# morse-messenger

./: Cargo.toml  README.md  build.rs  log
src/: client.rs  lib.rs  morser.rs  server.rs
src/client/: app.rs  events.rs  morse.rs  sound.rs
src/client/app/: components.rs
src/client/app/components/: cheat.rs  home.rs  signal.rs  tabs.rs  trans.rs
src/lib/: lib.rs
src/protos/: morser.proto
src/server/: my_messenger_server.rs  utils.rs
