[package]
name = "morse-messenger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

[dependencies]
crossterm = { version = "0.26.0", features = ["event-stream"] }
futures = "0.3.26"
futures-core = "0.3.26"
futures-timer = "3.0.2"
h2 = "0.3.15"
prost = "0.11.6"
rdev = { version = "0.5.2", features = ["unstable_grab"] }
rodio = "0.16.0"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = { version = "0.1.11", features = ["sync"] }
tokio-util = "0.7.4"
tonic = "0.8.3"
tui = "0.19.0"

[[bin]]
name = "client"

[[bin]]
name = "server"

[build-dependencies]
tonic-build = "0.8.4"
